src/test/ui/pattern/bindings-after-at/borrowck-pat-ref-mut-and-ref.stderr
error: cannot borrow `z` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:10:9
   |
LL |         ref mut z @ &mut Some(ref a) => {
   |         ---------^^^^^^^^^^^^^-----^
   |         |                     |
   |         |                     immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:31:9
   |
LL |     let ref mut a @ (ref b @ ref mut c) = u(); // sub-in-sub
   |         ---------^^^^-----------------^
   |         |            |       |
   |         |            |       another mutable borrow occurs here
   |         |            also borrowed as immutable here
   |         first mutable borrow occurs here

error: cannot borrow `b` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:31:22
   |
LL |     let ref mut a @ (ref b @ ref mut c) = u(); // sub-in-sub
   |                      -----^^^---------
   |                      |       |
   |                      |       mutable borrow occurs here
   |                      immutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:35:9
   |
LL |     let ref a @ ref mut b = U;
   |         -----^^^---------
   |         |       |
   |         |       mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:37:9
   |
LL |     let ref mut a @ ref b = U;
   |         ---------^^^-----
   |         |           |
   |         |           immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:39:9
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         -----^^^^---------^^---------^
   |         |        |          |
   |         |        |          mutable borrow occurs here
   |         |        mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:41:9
   |
LL |     let ref mut a @ (ref b, ref c) = (U, U);
   |         ---------^^^^-----^^-----^
   |         |            |      |
   |         |            |      immutable borrow occurs here
   |         |            immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:44:9
   |
LL |     let ref mut a @ ref b = u();
   |         ---------^^^-----
   |         |           |
   |         |           immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:49:9
   |
LL |     let ref a @ ref mut b = u();
   |         -----^^^---------
   |         |       |
   |         |       mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:55:9
   |
LL |     let ref mut a @ ref b = U;
   |         ---------^^^-----
   |         |           |
   |         |           immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:59:9
   |
LL |     let ref a @ ref mut b = U;
   |         -----^^^---------
   |         |       |
   |         |       mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:65:9
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) => {
   |         ---------^^^^^^-----^
   |         |              |
   |         |              immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:65:33
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) => {
   |                                 ---------^^^^^^^-----^
   |                                 |               |
   |                                 |               immutable borrow occurs here
   |                                 mutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:74:9
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) => {
   |         -----^^^^^^---------^
   |         |          |
   |         |          mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:74:33
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) => {
   |                                 -----^^^^^^^---------^
   |                                 |           |
   |                                 |           mutable borrow occurs here
   |                                 immutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:85:9
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { *b = U; false } => {}
   |         -----^^^^^^---------^
   |         |          |
   |         |          mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:85:33
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { *b = U; false } => {}
   |                                 -----^^^^^^^---------^
   |                                 |           |
   |                                 |           mutable borrow occurs here
   |                                 immutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:92:9
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { *a = Err(U); false } => {}
   |         ---------^^^^^^-----^
   |         |              |
   |         |              immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:92:33
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { *a = Err(U); false } => {}
   |                                 ---------^^^^^^^-----^
   |                                 |               |
   |                                 |               immutable borrow occurs here
   |                                 mutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:99:9
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { drop(b); false } => {}
   |         -----^^^^^^---------^
   |         |          |
   |         |          mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:99:33
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { drop(b); false } => {}
   |                                 -----^^^^^^^---------^
   |                                 |           |
   |                                 |           mutable borrow occurs here
   |                                 immutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:107:9
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { drop(a); false } => {}
   |         ---------^^^^^^-----^
   |         |              |
   |         |              immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:107:33
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { drop(a); false } => {}
   |                                 ---------^^^^^^^-----^
   |                                 |               |
   |                                 |               immutable borrow occurs here
   |                                 mutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:115:9
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         -----^^^^---------^^---------^
   |         |        |          |
   |         |        |          mutable borrow occurs here
   |         |        mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:120:9
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         -----^^^^---------^^---------^
   |         |        |          |
   |         |        |          mutable borrow occurs here
   |         |        mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:127:9
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         -----^^^^---------^^---------^
   |         |        |          |
   |         |        |          mutable borrow occurs here
   |         |        mutable borrow occurs here
   |         immutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:132:9
   |
LL |     let ref mut a @ (ref b, ref c) = (U, U);
   |         ---------^^^^-----^^-----^
   |         |            |      |
   |         |            |      immutable borrow occurs here
   |         |            immutable borrow occurs here
   |         mutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:24:11
   |
LL |     fn f1(ref a @ ref mut b: U) {}
   |           -----^^^---------
   |           |       |
   |           |       mutable borrow occurs here
   |           immutable borrow occurs here

error: cannot borrow `a` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:26:11
   |
LL |     fn f2(ref mut a @ ref b: U) {}
   |           ---------^^^-----
   |           |           |
   |           |           immutable borrow occurs here
   |           mutable borrow occurs here

error: cannot borrow `a` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:28:11
   |
LL |     fn f3(ref a @ [ref b, ref mut mid @ .., ref c]: [U; 4]) {}
   |           -----^^^^^^^^^^^----------------^^^^^^^^
   |           |               |
   |           |               mutable borrow occurs here
   |           immutable borrow occurs here

error[E0502]: cannot borrow `_` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:10:31
   |
LL |         ref mut z @ &mut Some(ref a) => {
   |         ----------------------^^^^^-
   |         |                     |
   |         |                     immutable borrow occurs here
   |         mutable borrow occurs here
...
LL |             **z = None;
   |             ---------- mutable borrow later used here

error[E0502]: cannot borrow `_` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:44:21
   |
LL |     let ref mut a @ ref b = u();
   |         ------------^^^^^
   |         |           |
   |         |           immutable borrow occurs here
   |         mutable borrow occurs here
...
LL |     *a = u();
   |     -------- mutable borrow later used here

error[E0502]: cannot borrow `_` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:49:17
   |
LL |     let ref a @ ref mut b = u();
   |         --------^^^^^^^^^
   |         |       |
   |         |       mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |     drop(a);
   |          - immutable borrow later used here

error[E0502]: cannot borrow `_` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:74:20
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) => {
   |         -----------^^^^^^^^^-
   |         |          |
   |         |          mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |             drop(a);
   |                  - immutable borrow later used here

error[E0502]: cannot borrow `_` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:74:45
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) => {
   |                                 ------------^^^^^^^^^-
   |                                 |           |
   |                                 |           mutable borrow occurs here
   |                                 immutable borrow occurs here
...
LL |             drop(a);
   |                  - immutable borrow later used here

error[E0594]: cannot assign to `*b`, as it is immutable for the pattern guard
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:85:61
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { *b = U; false } => {}
   |                                                             ^^^^^^ cannot assign
   |
   = note: variables bound in patterns are immutable until the end of the pattern guard

error[E0594]: cannot assign to `*a`, as it is immutable for the pattern guard
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:92:61
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { *a = Err(U); false } => {}
   |                                                             ^^^^^^^^^^^ cannot assign
   |
   = note: variables bound in patterns are immutable until the end of the pattern guard

error[E0507]: cannot move out of `b` in pattern guard
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:99:66
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { drop(b); false } => {}
   |                                                                  ^ move occurs because `b` has type `&mut main::U`, which does not implement the `Copy` trait
   |
   = note: variables bound in patterns cannot be moved from until after the end of the pattern guard

error[E0507]: cannot move out of `b` in pattern guard
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:99:66
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { drop(b); false } => {}
   |                                                                  ^ move occurs because `b` has type `&mut main::U`, which does not implement the `Copy` trait
   |
   = note: variables bound in patterns cannot be moved from until after the end of the pattern guard

error[E0507]: cannot move out of `a` in pattern guard
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:107:66
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { drop(a); false } => {}
   |                                                                  ^ move occurs because `a` has type `&mut std::result::Result<main::U, main::U>`, which does not implement the `Copy` trait
   |
   = note: variables bound in patterns cannot be moved from until after the end of the pattern guard

error[E0507]: cannot move out of `a` in pattern guard
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:107:66
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { drop(a); false } => {}
   |                                                                  ^ move occurs because `a` has type `&mut std::result::Result<main::U, main::U>`, which does not implement the `Copy` trait
   |
   = note: variables bound in patterns cannot be moved from until after the end of the pattern guard

error[E0502]: cannot borrow `_` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:120:18
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         ---------^^^^^^^^^------------
   |         |        |
   |         |        mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |     drop(a);
   |          - immutable borrow later used here

error[E0502]: cannot borrow `_` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:120:29
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         --------------------^^^^^^^^^-
   |         |                   |
   |         |                   mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |     drop(a);
   |          - immutable borrow later used here

error[E0502]: cannot borrow `_` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:127:18
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         ---------^^^^^^^^^------------
   |         |        |
   |         |        mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |     drop(a);
   |          - immutable borrow later used here

error[E0502]: cannot borrow `_` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:127:29
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         --------------------^^^^^^^^^-
   |         |                   |
   |         |                   mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |     drop(a);
   |          - immutable borrow later used here

error: aborting due to 45 previous errors

Some errors have detailed explanations: E0502, E0507, E0594.
For more information about an error, try `rustc --explain E0502`.
